[package]
name = "nertsal-bot"
version = "0.1.0"
authors = ["Kudasov Alexander <sasha.kudasov04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "0.2.1"
futures = "0.3.6"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.41"
copy_dir = "0.1.2"
linefeed = "0.6.0"
colored = "2"
bot-core = { path = "crates/bot-core" }
bot-completion = { path = "crates/bot-completion" }
bot-commands = { path = "crates/bot-commands" }
custom-bot = { path = "crates/bots/custom-bot" }
gamejam-bot = { path = "crates/bots/gamejam-bot" }
quote-bot = { path = "crates/bots/quote-bot" }
timer-bot = { path = "crates/bots/timer-bot" }
vote-bot = { path = "crates/bots/vote-bot" }
