[package]
name = "jambo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*"
]

[dependencies]
twitch_bot = { path = "crates/twitch_bot" }
serde = { version = "1.0", features = ["derive"] }
copy_dir = "0.1.2"
linefeed = "0.6.0"
colored = "2"
