[package]
name = "bot-commands"
version = "0.1.0"
authors = ["Alexander <sasha.kudasov04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "0.2.1"
linefeed = "0.6.0"
colored = "2"
async-trait = "0.1.41"
nertsal-commands = { git = "https://github.com/Nertsal/nertsal-commands" }
