[package]
name = "bot-completion"
version = "0.1.0"
authors = ["Alexander <sasha.kudasov04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nertsal-commands = { git = "https://github.com/Nertsal/nertsal-commands" }
linefeed = "0.6.0"
