[package]
name = "gamejam-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bot-core = { path = "../bot-core" }
rand = "0.7.3"
google-sheets4 = "*"
hyper = "0.14"
hyper-rustls = "0.22"
async-std = "1.9.0"
