[package]
name = "twitch_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nertsal-commands = { git = "https://github.com/Nertsal/nertsal-commands" }
twitch-irc = "0.2.1"
futures = "0.3.6"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.41"
